apps/ofnir/ofnir-paperless-ngx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: ofnir-paperless-ngx
spec:
  parentRefs:
    - name: gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - docs.ofnir.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-ngx
          port: 8000
