apps/ofnir/ofnir-paperless-ngx/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tenant-baseline
  namespace: ofnir-paperless-ngx
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": ofnir-paperless-ngx
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": envoy-gateway-system
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-prometheus-stack
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": ofnir-paperless-ngx
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": external-secrets
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": vault
    - toFQDNs:
        - matchPattern: "*"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
